fix configs in setup_scripts, use to make test configs
- convert invalid_option_config from ini to toml
- convert invalid_section_config from ini to toml
- add some configs, remove earlier versions of others
- rewrite rerun_prep.py script to make test configs

  instead of making `tmp` configs that it saves in the
  `setup_scripts` directory, the script will generate
  configs in `test_data/configs` by copying them to that
  config, then changing their name (from `setup_*_config.toml`
  to `test_*_config.toml`), and finally running them so that
  paths get added to the test config

- change how 'make clean' command removes configs

  now removes any config in test_data/configs that matches
  wildcard pattern of `test_*toml` since these are the files
  generated by `rerun_prep.py`

- add setup_train_audo_wav_annot_koumura.toml to tests/setup_scripts/
- fix labelset in setup_train_audio_wav_annot_koumura.toml
- fix annot_file in setup_train_spect_mat_annot_yarden.toml
- fix labelset in setup_train_spect_mat_annot_yarden.toml

  so that setup_scripts/rerun_prep.py will run
  without crash

  rewrote labelset to only include labels present in
  './tests/test_data/mat/llb3/llb3_annot_subset.mat'

- remove .ini configs from test_data/configs
- change options in setup_train_spect_mat_annot_yarden.toml
  + so that `vak prep` runs without crashing (for now)
  + reduce labelset so it only include more common labels
  + change size of splits to be roughly equal
- change other options / values that were no longer valid

--- a/tests/setup_scripts/setup_learncurve_audio_cbin_annot_notmat.toml
+++ b/tests/setup_scripts/setup_learncurve_audio_cbin_annot_notmat.toml
@@ -15,17 +15,22 @@ freq_cutoffs = [ 500, 10000 ]
 thresh = 6.25
 transform_type = 'log_spect'
 
+[DATALOADER]
+window_size = 88
+
 [LEARNCURVE]
-models = ['TweetyNet']
-root_results_dir = './tests/test_data/results/train'
+models = 'TweetyNet'
+normalize_spectrograms = true
 batch_size = 11
 num_epochs = 2
-normalize_spectrograms = true
-val_step = 1
-ckpt_step = 1
-save_only_single_checkpoint_file = true
+val_step = 50
+ckpt_step = 200
+patience = 4
+num_workers = 4
 train_set_durs = [ 4, 6 ]
-replicates = 2
+num_replicates = 2
+device = "cuda"
+root_results_dir = './tests/test_data/results/learncurve/audio_cbin_annot_notmat'
 
 [TweetyNet]
 optimizer.lr = 0.001
