fix how test_data is organized
- add sub-directories with .gitkeeps to test_data
- modify .gitgnore to ignore test_data subdirs

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ build/
 doc/_build/
 
 # test data
-tests/test_data/prep/*/
-tests/test_data/results/*/
+tests/test_data/prep/**
+tests/test_data/results/**
 tests/test_data/*.tar.gz
-tests/setup_scripts/tmp_setup_*_config.toml
+tests/test_data/configs/test_*.toml
