--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -86,4 +86,5 @@ batch_size = 11
 num_workers = 4
 device = 'cuda'
 spect_scaler_path = '/home/user/results_181014_194418/spect_scaler'
+min_segment_dur = 0.004
 majority_vote = false
