--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -80,6 +80,7 @@ device = 'cuda'
 csv_path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
 checkpoint_path = '/home/user/results_181014_194418/TweetyNet/checkpoints/'
 labelmap_path = '/home/user/results_181014_194418/labelmap.json'
+annot_csv_filename = '032312_prep_191224_225910.annot.csv'
 output_dir = './tests/test_data/prep/learncurve'
 models = 'TweetyNet'
 batch_size = 11
