organize some test data into 'generated' sub-dir
part 2 of re-organzing test data into 'source' and
'generated' data, where 'source' are files used as input
and 'generated' are files actually created by vak

point of moving into two main sub-directories like this
is that both can now be downloaded as .tar.gz instead of
stored in repo, and this gives us more flexibility in
terms of modifying their contents as well.

Would be good to have an official test dataset
under version control at some point maybe,
but git is probably not the best tool for this

- move all the outputs of running `test_data_generate` into
  a 'generated' sub-directory in './tests/test_data'
- remove all the .gitkeep files that were in those sub-sub-dirs
- instead just have single .gitkeep inside 'generated'
- modify .gitignore so it instead just ignores all of 'generated'

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,5 @@ build/
 doc/_build/
 
 # test data
-tests/test_data/prep/**
-tests/test_data/results/**
-tests/test_data/*.tar.gz
-tests/test_data/configs/test_*.toml
+tests/test_data/generated/
+*.tar.gz
