ENH: `vak.core.predict` can save model outputs, fix #90
- add ANNOT_CSV_SUFFIX and NET_OUTPUT_SUFFIX to `constants`,
  to use in `vak.core.predict`
- modify core.predict so it can save net outputs, fixes #90
  - add `save_net_outputs` parameter
  - if `save_net_outputs` is True, reshape outputs from
    pred_dict returned by model, remove any padding,
    then save in a file:
    output_dir/{spect path stem}.{model name}.output.npz
- add save_net_outputs option to predict config section
- make vak.cli.predict pass 'save_net_outputs' argument to core.predict
- modify `core.predict` unit tests, to test `save_net_outputs` parameter

--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -91,3 +91,5 @@ device = 'cuda'
 spect_scaler_path = '/home/user/results_181014_194418/spect_scaler'
 min_segment_dur = 0.004
 majority_vote = false
+save_net_outputs = false
+
