add `spect_output_dir` option to PREP section, fix #289
- add `spect_output_dir` attribute to `vak.config.prep.PrepConfig`
- add as an option in PREP section to `vak/config/valid.toml`

--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -10,6 +10,7 @@ data_dir = './tests/test_data/cbins/gy6or6/032312'
 output_dir = './tests/test_data/prep/learncurve'
 audio_format = 'cbin'
 spect_format = 'npz'
+spect_output_dir = './tests/test_data/generated/audio_cbin_annot_notmat'
 annot_format = 'notmat'
 annot_file = './some/annot/file'
 labelset = 'iabcdefghjk'
