add `spect_output_dir` to configs for test data
so that generated files will be saved in
`tests/test_data/generated` instead of in
the `source_data` directories

--- a/tests/test_data/configs/test_learncurve_audio_cbin_annot_notmat.toml
+++ b/tests/test_data/configs/test_learncurve_audio_cbin_annot_notmat.toml
@@ -1,8 +1,9 @@
 [PREP]
 data_dir = './tests/test_data/source/audio_cbin_annot_notmat/gy6or6/032312'
-output_dir = './tests/test_data/generated/prep/train'
+output_dir = './tests/test_data/generated/prep/learncurve/audio_cbin_annot_notmat'
 audio_format = 'cbin'
 annot_format = 'notmat'
+spect_output_dir = "./tests/test_data/generated/prep/learncurve/audio_cbin_annot_notmat"
 labelset = 'iabcdefghjk'
 train_dur = 50
 val_dur = 15
