--- a/tests/test_data/configs/test_eval_audio_cbin_annot_notmat.toml
+++ b/tests/test_data/configs/test_eval_audio_cbin_annot_notmat.toml
@@ -4,6 +4,7 @@ data_dir = "./tests/test_data/source/audio_cbin_annot_notmat/gy6or6/032412"
 output_dir = "./tests/test_data/generated/prep/eval/audio_cbin_annot_notmat"
 audio_format = "cbin"
 annot_format = "notmat"
+spect_output_dir = "./tests/test_data/generated/prep/eval/audio_cbin_annot_notmat"
 
 [SPECT_PARAMS]
 fft_size = 512
