--- a/tests/test_data/configs/test_train_audio_cbin_annot_notmat.toml
+++ b/tests/test_data/configs/test_train_audio_cbin_annot_notmat.toml
@@ -3,6 +3,7 @@ data_dir = "./tests/test_data/source/audio_cbin_annot_notmat/gy6or6/032312"
 output_dir = "./tests/test_data/generated/prep/train/audio_cbin_annot_notmat"
 audio_format = "cbin"
 annot_format = "notmat"
+spect_output_dir = "./tests/test_data/generated/prep/train/audio_cbin_annot_notmat"
 labelset = "iabcdefghjk"
 train_dur = 50
 val_dur = 15
