--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -73,6 +73,7 @@ train_set_durs = [ 4, 6 ]
 num_replicates = 2
 csv_path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
 results_dir_made_by_main_script = '/some/path/to/learncurve/'
+previous_run_path = '/some/path/to/learncurve/results_20210106_132152'
 num_workers = 4
 device = 'cuda'
 
