--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "vak"
-version = "0.3.3"
+version = "0.4.0dev1"
 description = "neural network toolbox for animal communication and bioacoustics"
 authors = ["David Nicholson <nickledave@users.noreply.github.com>"]
 license = "BSD"
