--- a/tests/test_data/configs/test_predict_audio_wav_annot_koumura.toml
+++ b/tests/test_data/configs/test_predict_audio_wav_annot_koumura.toml
@@ -23,7 +23,7 @@ batch_size = 11
 num_workers = 4
 device = "cuda"
 output_dir = "./tests/test_data/generated/results/predict/audio_wav_annot_koumura"
-annot_csv_filename = "bl26lb16.041912.annot.csv"
+annot_csv_filename = "Bird0.annot.csv"
 
 [TweetyNet.optimizer]
 lr = 0.001
