--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,7 @@ jobs:
         run: sudo apt install libsndfile1
       - name: run tests
         run: |
+          make test-data-download-source
+          make test-data-download-generate
           poetry install
           poetry run pytest
