--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,29 +14,29 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6.2,<4.0"
-attrs = "^20.3.0"
+python = ">=3.6.2"
+attrs = ">=20.3.0"
 crowsetta = ">=3.1.0"
-dask = {extras = ["bag"], version = "^2021.1.0"}
-evfuncs = "^0.3.1"
-joblib = "^1.0.0"
-matplotlib = "^3.3.3"
-numpy = "^1.19.4"
-scipy = "^1.5.4"
-SoundFile = "^0.10.3"
-pandas = "^1.1.5"
-tensorboard = "^2.2.0"
-toml = "^0.10.2"
-torch = "^1.7.1"
-torchvision = "^0.8.2"
-tqdm = "^4.55.0"
+dask = {extras = ["bag"], version = ">=2021.1.0"}
+evfuncs = ">=0.3.1"
+joblib = ">=1.0.0"
+matplotlib = ">=3.3.3"
+numpy = ">=1.19.4"
+scipy = ">=1.5.4"
+SoundFile = ">=0.10.3"
+pandas = ">=1.1.5"
+tensorboard = ">=2.2.0"
+toml = ">=0.10.2"
+torch = ">=1.7.1"
+torchvision = ">=0.8.2"
+tqdm = ">=4.55.0"
 
 [tool.poetry.dev-dependencies]
-twine = "^3.3.0"
-pytest = "^6.2.1"
+twine = ">=3.3.0"
+pytest = ">=6.2.1"
 tweetynet = ">=0.5.0"
-sphinx = "^3.4.1"
-ipython = "<7.0"
+sphinx = ">=3.4.1"
+ipython = ">=7.0"
 
 [tool.poetry.scripts]
 vak = 'vak.__main__:main'
