--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,26 +10,28 @@ classifiers = [
         'Programming Language :: Python',
         'Programming Language :: Python :: 3',
         'Programming Language :: Python :: 3.6',
+        'Programming Language :: Python :: 3.7',
+        'Programming Language :: Python :: 3.8',
         'Programming Language :: Python :: Implementation :: CPython'
 ]
 
 [tool.poetry.dependencies]
 python = ">=3.6.2"
-attrs = ">=20.3.0"
-crowsetta = ">=3.1.0"
-dask = {extras = ["bag"], version = ">=2021.1.0"}
-evfuncs = ">=0.3.1"
-joblib = ">=1.0.0"
+attrs = ">=19.3.0"
+crowsetta = ">=3.1.1"
+dask = {extras = ["bag"], version = ">=2.10.1"}
+evfuncs = ">=0.3.2"
+joblib = ">=0.14.1"
 matplotlib = ">=3.3.3"
-numpy = ">=1.19.4"
-scipy = ">=1.5.4"
+numpy = ">=1.18.1"
+scipy = ">=1.4.1"
 SoundFile = ">=0.10.3"
-pandas = ">=1.1.5"
+pandas = ">=1.0.1"
 tensorboard = ">=2.2.0"
 toml = ">=0.10.2"
-torch = ">=1.7.1"
-torchvision = ">=0.8.2"
-tqdm = ">=4.55.0"
+torch = ">=1.4.0, !=1.8.0"
+torchvision = ">=0.5.0"
+tqdm = ">=4.42.1"
 
 [tool.poetry.dev-dependencies]
 twine = ">=3.3.0"
