DEV: add script that will run on CI to fix paths
- add `fix_prep_csv_paths.py` scripts
    that loads all the .csv files
    created by `prep` and changes all the paths in the various
    path columns so that they are local to whatever system they
    are running on
- add line to `run` section of `ci.yml` that runs this script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,5 @@ jobs:
           make test-data-download-source
           make test-data-download-generate
           poetry install
+          poetry run python ./src/scripts/test_data/fix_prep_csv_paths.py
           poetry run pytest
