ENH: add built-in TeenyTweetyNetModel, fix #308
- add src/vak/models/teenytweetynet.py
- fix/change models.__init__, import teenytweetynet
- add TeenyTweetyNetModel to "vak.models" table of "plugins"
  in pyproject.toml
- add tests/test_models/test_teenytweetynet.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ vak = 'vak.__main__:main'
 [tool.poetry.plugins]
 
 [tool.poetry.plugins."vak.models"]
+TeenyTweetyNetModel = 'vak.models.teenytweetynet:TeenyTweetyNetModel'
 
 [tool.poetry.plugins."vak.metrics"]
 Accuracy = 'vak.metrics.Accuracy'
