--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ pytest = ">=6.2.1"
 tweetynet = ">=0.5.0"
 sphinx = ">=3.4.1"
 ipython = ">=7.0"
+jedi = "<0.18"
 
 [tool.poetry.scripts]
 vak = 'vak.__main__:main'
