TST/CI: refactor test suite to use TeenyTweetyNet, fix #330
generating test data:
- rename tweetynet configs
- add teenytweetynet configs
- modify test_data_generate.py script
  - so it finds all configs
  - have it make model subdirectories in results/
- rewrite Makefile
  - differentiate 'all' and 'ci' generated test data
  - change commands, variables, urls to data

refactoring tests:
- add `model` parameters to fixtures:
  - to `specific_config` fixture
  - to `specific_config_toml` fixture
  - to `dataframe` fixtures
  - change `previous_run_path` fixture to `previous_run_path_factory`
    - use `model` as argument to `_previous_run_path` function
      returned by factory
- add `models` command-line option for pytest
  + that will parametrize any test that specifies `models` fixture
    with whatever arguments are passed in at command line
- use `model` fixture in tests
  - add model fixture to unit tests in test_core/ and test_cli/
  - use `model` fixture in a test in test_labeled_timebins
  - use `previous_run_path_factory` with `model` in
    test_cli/test_learncurve.py
- also add `default_model` fixture that is used whenever a model
  name is needed by other fixtures (e.g. `specific_config`) but
  the model shouldn't actually matter
  + idea is this model should work no matter where tests are run,
    CI v. locally
  + this is a code smell to me -- if tests don't depend on model
    then why do I need a "dummy model"
  + but not obvious to me right now how to disentangle them, and I
    just want to get the damn CI working

CI:
- have ci.yml download just test data generated for ci
- have ci run pytest using command-line option models,
  and specifying only teenytweetynet for now
  (default but make it explicit anyway)
- fix the `fix_prep_csv_paths` script so that it correctly
  finds prep csv files with the new test data directory
  names and structure

other refactoring
- move src/scripts to tests/scripts
- rename test_data to data_for_tests
  + so it do

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: run tests
         run: |
           make test-data-download-source
-          make test-data-download-generate
+          make test-data-download-generated-ci
           poetry install
-          poetry run python ./src/scripts/test_data/fix_prep_csv_paths.py
-          poetry run pytest
+          poetry run python ./tests/scripts/fix_prep_csv_paths.py
+          poetry run pytest --models teenytweetynet
