--- a/tests/data_for_tests/configs/tweetynet_predict_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/tweetynet_predict_audio_cbin_annot_notmat.toml
@@ -1,8 +1,8 @@
 [PREP]
-data_dir = "./tests/test_data/source/audio_wav_annot_koumura/Bird0"
-output_dir = "./tests/test_data/generated/prep/predict/audio_wav_annot_koumura"
-audio_format = "wav"
-spect_output_dir = "./tests/test_data/generated/prep/predict/audio_wav_annot_koumura"
+data_dir = "./tests/data_for_tests/source/audio_cbin_annot_notmat/gy6or6/032412"
+output_dir = "./tests/data_for_tests/generated/prep/predict/audio_cbin_annot_notmat"
+audio_format = "cbin"
+spect_output_dir = "./tests/data_for_tests/generated/prep/predict/audio_cbin_annot_notmat"
 
 [SPECT_PARAMS]
 fft_size = 512
@@ -22,8 +22,8 @@ models = "TweetyNet"
 batch_size = 11
 num_workers = 4
 device = "cuda"
-output_dir = "./tests/test_data/generated/results/predict/audio_wav_annot_koumura"
-annot_csv_filename = "Bird0.annot.csv"
+output_dir = "./tests/data_for_tests/generated/results/predict/audio_cbin_annot_notmat/tweetynet"
+annot_csv_filename = "bl26lb16.041912.annot.csv"
 
 [TweetyNet.optimizer]
 lr = 0.001
