DEV/CI: add and use `codecov`, fix #86
- add `pytest-cov` as dev dependency
  + upper bound Python as <3.9 to get `coverage` to install
- make ci.yml run pytest with --cov option, save xml report
- set .gitignore to ignore coverage outputs

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ doc/_build/
 tests/data_for_tests/source/
 tests/data_for_tests/generated/
 *.tar.gz
+
+# coverage / pytest-cov
+.coverage
+coverage.xml
