--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,4 @@ jobs:
           make test-data-download-generated-ci
           poetry install
           poetry run python ./tests/scripts/fix_prep_csv_paths.py
-          poetry run pytest --models teenytweetynet
+          poetry run pytest --models teenytweetynet  --cov=./ --cov-report=xml
