--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6.2"
+python = ">=3.6.2,<3.9"
 attrs = ">=19.3.0"
 crowsetta = ">=3.1.1"
 dask = {extras = ["bag"], version = ">=2.10.1"}
@@ -41,6 +41,7 @@ sphinx = ">=3.4.1"
 ipython = ">=7.0"
 jedi = "<0.18"
 black = "^20.8b1"
+pytest-cov = "^2.11.1"
 
 [tool.poetry.scripts]
 vak = 'vak.__main__:main'
