--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ classifiers = [
         'Programming Language :: Python :: 3.8',
         'Programming Language :: Python :: Implementation :: CPython'
 ]
+readme = 'README.md'
+homepage = 'https://github.com/NickleDave/vak'
 
 [tool.poetry.dependencies]
 python = ">=3.6.2,<3.9"
