--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.7, 3.8, 3.9]
-        poetry-version: [1.1.4]
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -19,9 +18,6 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: abatilo/actions-poetry@v2.0.0
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
       - name: install libsndfile1 on ubuntu
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt install libsndfile1
@@ -29,6 +25,6 @@ jobs:
         run: |
           make test-data-download-source
           make test-data-download-generated-ci
-          poetry install
-          poetry run python ./tests/scripts/fix_prep_csv_paths.py
-          poetry run pytest --models teenytweetynet  --cov=./ --cov-report=xml
+          pip install '.[test]'
+          python ./tests/scripts/fix_prep_csv_paths.py
+          pytest --models teenytweetynet  --cov=./ --cov-report=xml
