--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,14 @@
-[tool.poetry]
+[build-system]
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+
+[project]
 name = "vak"
-version = "0.4.0"
 description = "a neural network toolbox for animal vocalizations and bioacoustics"
-authors = ["David Nicholson <nickledave@users.noreply.github.com>"]
-license = "BSD"
+version = "0.4.0"
+authors = [
+    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"}
+]
 classifiers = [
         'License :: OSI Approved :: BSD License',
         'Development Status :: 5 - Production/Stable',
@@ -14,50 +19,58 @@ classifiers = [
         'Programming Language :: Python :: 3.9',
         'Programming Language :: Python :: Implementation :: CPython'
 ]
-readme = 'README.md'
-homepage = 'https://github.com/NickleDave/vak'
+requires-python = ">=3.7"
+readme = "README.md"
+license = {file = "LICENSE"}
+dependencies = [
+    "attrs >=19.3.0",
+    "crowsetta >=3.1.1, <3.3.0",
+    "dask >=2.10.1",
+    "evfuncs >=0.3.2",
+    "joblib >=0.14.1",
+    "matplotlib >=3.3.3",
+    "numpy >=1.18.1",
+    "scipy >=1.4.1",
+    "SoundFile >=0.10.3",
+    "pandas >=1.0.1",
+    "tensorboard >=2.2.0",
+    "toml >=0.10.2",
+    "torch >=1.7.2",
+    "torchvision >=0.5.0",
+    "tqdm >=4.42.1",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.7,<3.10"
-attrs = ">=19.3.0"
-crowsetta = ">=3.1.1"
-dask = {extras = ["bag"], version = ">=2.10.1"}
-evfuncs = ">=0.3.2"
-joblib = ">=0.14.1"
-matplotlib = ">=3.3.3"
-numpy = ">=1.18.1"
-scipy = ">=1.4.1"
-SoundFile = ">=0.10.3"
-pandas = ">=1.0.1"
-tensorboard = ">=2.2.0"
-toml = ">=0.10.2"
-torch = ">=1.4.0, !=1.8.0"
-torchvision = ">=0.5.0"
-tqdm = ">=4.42.1"
+[project.optional-dependencies]
+dev = [
+    "twine >=3.3.0",
+    "black >=20.8b1",
+    "ipython >=7.0"
+]
+test = [
+    "pytest >=6.2.1",
+    "pytest-cov >=2.11.1",
+    "tweetynet >=0.5.0",
+]
+doc = [
+    "sphinx >=3.4.1"
+]
 
-[tool.poetry.dev-dependencies]
-twine = ">=3.3.0"
-pytest = ">=6.2.1"
-tweetynet = ">=0.5.0"
-sphinx = ">=3.4.1"
-ipython = ">=7.0"
-jedi = "<0.18"
-black = "^20.8b1"
-pytest-cov = "^2.11.1"
+[project.urls]
+Source = "https://github.com/NickleDave/vak"
+Documentation = "https://vak.readthedocs.io"
 
-[tool.poetry.scripts]
+[project.scripts]
 vak = 'vak.__main__:main'
 
-[tool.poetry.plugins]
-
-[tool.poetry.plugins."vak.models"]
+[project.entry-points."vak.models"]
 TeenyTweetyNetModel = 'vak.models.teenytweetynet:TeenyTweetyNetModel'
 
-[tool.poetry.plugins."vak.metrics"]
+[project.entry-points."vak.metrics"]
 Accuracy = 'vak.metrics.Accuracy'
 Levenshtein = 'vak.metrics.Levenshtein'
 SegmentErrorRate = 'vak.metrics.SegmentErrorRate'
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.flit.sdist]
+exclude = [
+    "tests/data_for_tests"
+]
