--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ readme = "README.md"
 license = {file = "LICENSE"}
 dependencies = [
     "attrs >=19.3.0",
-    "crowsetta >=3.1.1, <3.3.0",
+    "crowsetta >=3.2",
     "dask >=2.10.1",
     "evfuncs >=0.3.2",
     "joblib >=0.14.1",
@@ -35,7 +35,7 @@ dependencies = [
     "pandas >=1.0.1",
     "tensorboard >=2.2.0",
     "toml >=0.10.2",
-    "torch >=1.7.2",
+    "torch >=1.7.1",
     "torchvision >=0.5.0",
     "tqdm >=4.42.1",
 ]
@@ -49,7 +49,7 @@ dev = [
 test = [
     "pytest >=6.2.1",
     "pytest-cov >=2.11.1",
-    "tweetynet >=0.5.0",
+    "tweetynet >=0.7.0",
 ]
 doc = [
     "sphinx >=3.4.1"
