--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -1,4 +1,4 @@
-name: CI
+name: MacOS
 on:
   push:
     branches:
@@ -11,16 +11,12 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.7, 3.8, 3.9]
-        os: [ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: install libsndfile1 on ubuntu
-        if: matrix.os == 'ubuntu-latest'
-        run: sudo apt install libsndfile1
       - name: run tests
         run: |
           make test-data-download-source
