DOC: switch to `furo` theme, fix #451 [skip ci]
- add `furo` to project.optional-dependencies.doc in pyproject.toml
- specify html_theme = 'furo' in doc/conf.py
- add :hide-toc: at top of doc/index.rst
- add sphinx extensions as optional-dependencies.doc in pyproject.toml:
  sphinxext-opengraph, sphinx-copybutton, sphinx-autobuild
- add extensions in doc/conf.py
- remove theme option that was for alabaster in doc/conf.py
- remove contents directive from contributors.rst
- remove links from headings in get_started/index.rst
- remove contents directive from installation.rst
- fix formatting and add a link in howto_user_annot.rst
- remove contents directive from referce/config.rst
- make annnotation example images have solid white backgrounds

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,11 @@ test = [
     "tweetynet >=0.7.0",
 ]
 doc = [
-    "sphinx >=3.4.1"
+    "furo >=2022.1.2",
+    "sphinx >=3.4.1",
+    "sphinxext-opengraph  >=0.5.1",
+    "sphinx-copybutton >=0.4.0",
+    "sphinx-autobuild >= 2021.3.14",
 ]
 
 [project.urls]
