--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ test = [
 ]
 doc = [
     "furo >=2022.1.2",
+    "myst-parser >=0.17.0",
     "sphinx >=3.4.1",
     "sphinxext-opengraph  >=0.5.1",
     "sphinx-copybutton >=0.4.0",
