ENH: add ability to continue training, fix #5
Adds ability to continue training a model,
by specifying a `checkpoint_path` and
optionally a `spect_scaler_path`.

Importing checkpoints of partially or fully trained models,
with which to further train models from, is important
for transfer learning and for continuing failed
or interrupted training of models.

- modify `vak.core.train` so it can continue training

  Add `checkpoint_path` parameter,
  checkpoint_path can be given
  to model training. Default behavior is unchanged as the code checks
  whether a checkpoint_path is given,
  and if it is not it initializes a new model.
  However if a checkpoint_path is given,
  that model is loaded and training resumes from there.

  Also add `spect_scaler_path` parameter.
  Checkpoints also typically come
  with spectrogram scaler objects for normalization.
  Parameter is used to read in a spectrogram scaler object
  with the checkpoint.
  Chose to implement logic as discussed in #5.
  where there is an error if `spect_scaler_path` is given
  but `normalize_spectrograms` is False.

  Finally add `labelmap_path`.
  Adds ability to load labelmaps which are generated with checkpoints.

  Both `spect_scaler_path` and `labelmap_path` are copied
  to the new `results_path` directory made when
  running `vak.core.train`. This causes some reduplication
  that may surprise users but it is meant to help with
  reproducibility and handle cases where files are provided
  without the original results directory.

- add attributes to `vak.config.train.TrainConfig` that represent
  new options needed when continuining training

  Add `checkpoint_path`,
  defaults to none so as to not change previous behavior.
  Also add `spect_scaler_path` that defaults to None.
  Finally add `labelmap_path` to load labelmap.json,
  that again defaults to None.

- update valid.toml items for importing checkpoint

  Adds new option names for TrainConfig to the valid.toml file

- Have `vak.cli.train` pass n

--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -46,6 +46,10 @@ val_step = 1
 ckpt_step = 1
 patience = 4
 results_dir_made_by_main_script = '/some/path/to/learncurve/'
+checkpoint_path = '/home/user/results_181014_194418/TweetyNet/checkpoints/'
+labelmap_path = '/home/user/results_181014_194418/labelmap.json'
+spect_scaler_path = '/home/user/results_181014_194418/spect_scaler'
+
 
 [EVAL]
 csv_path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
