--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "joblib >=0.14.1",
     "matplotlib >=3.3.3",
     "numpy >=1.18.1",
+    "protobuf <=3.20.1",
     "scipy >=1.4.1",
     "SoundFile >=0.10.3",
     "pandas >=1.0.1",
