DOC: Fix links to point to vocalpy GitHub org [skip ci]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ doc = [
 ]
 
 [project.urls]
-Source = "https://github.com/NickleDave/vak"
+Source = "https://github.com/vocalpy/vak"
 Documentation = "https://vak.readthedocs.io"
 
 [project.scripts]
