--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ readme = "README.md"
 license = {file = "LICENSE"}
 dependencies = [
     "attrs >=19.3.0",
-    "crowsetta >=3.4.0",
+    "crowsetta >=3.4.0, <4.0.0",
     "dask >=2.10.1",
     "evfuncs >=0.3.4",
     "joblib >=0.14.1",
