TST: Change teenytweetynet configs to speed up CI
- change spect_params to make arrays smaller
- have 'output_dir' include a model name sub-dir,
  so we can be sure to only include prep files
  for the models we test on CI.
  This will additionally shrink the size of the .tar.gz file
  with data for tests on CI, so it's faster to download
- fix 'spect_output_dir' option to point to same dir as 'output_dir',
  also to be able to pick and choose which files go in .tar.gz

--- a/tests/data_for_tests/configs/tweetynet_predict_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/tweetynet_predict_audio_cbin_annot_notmat.toml
@@ -1,15 +1,15 @@
 [PREP]
 data_dir = "./tests/data_for_tests/source/audio_cbin_annot_notmat/gy6or6/032412"
-output_dir = "./tests/data_for_tests/generated/prep/predict/audio_cbin_annot_notmat"
+output_dir = "./tests/data_for_tests/generated/prep/predict/audio_cbin_annot_notmat/tweetynet"
 audio_format = "cbin"
-spect_output_dir = "./tests/data_for_tests/generated/prep/predict/audio_cbin_annot_notmat"
+spect_output_dir = "./tests/data_for_tests/generated/prep/predict/audio_cbin_annot_notmat/tweetynet"
 
 [SPECT_PARAMS]
 fft_size = 512
 step_size = 64
-freq_cutoffs = [ 500, 10000 ]
+freq_cutoffs = [ 500, 10000,]
 thresh = 6.25
-transform_type = 'log_spect'
+transform_type = "log_spect"
 
 [DATALOADER]
 window_size = 88
