--- a/tests/data_for_tests/configs/teenytweetynet_train_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/teenytweetynet_train_audio_cbin_annot_notmat.toml
@@ -1,18 +1,18 @@
 [PREP]
 data_dir = "./tests/data_for_tests/source/audio_cbin_annot_notmat/gy6or6/032312"
-output_dir = "./tests/data_for_tests/generated/prep/train/audio_cbin_annot_notmat"
+output_dir = "./tests/data_for_tests/generated/prep/train/audio_cbin_annot_notmat/teenytweetynet"
 audio_format = "cbin"
 annot_format = "notmat"
-spect_output_dir = "./tests/data_for_tests/generated/prep/train/audio_cbin_annot_notmat"
+spect_output_dir = "./tests/data_for_tests/generated/prep/train/audio_cbin_annot_notmat/teenytweetynet"
 labelset = "iabcdefghjk"
 train_dur = 50
 val_dur = 15
 test_dur = 30
 
 [SPECT_PARAMS]
-fft_size=512
-step_size=64
-freq_cutoffs = [500, 10000]
+fft_size = 256
+step_size = 64
+freq_cutoffs = [ 1000, 8000,]
 thresh = 6.25
 transform_type = "log_spect"
 
