--- a/tests/data_for_tests/configs/teenytweetynet_train_spect_mat_annot_yarden.toml
+++ b/tests/data_for_tests/configs/teenytweetynet_train_spect_mat_annot_yarden.toml
@@ -1,17 +1,18 @@
 [PREP]
 data_dir = "./tests/data_for_tests/source/spect_mat_annot_yarden/llb3/spect"
-output_dir = "./tests/data_for_tests/generated/prep/train/spect_mat_annot_yarden"
+output_dir = "./tests/data_for_tests/generated/prep/train/spect_mat_annot_yarden/teenytweetynet"
 spect_format = "mat"
 annot_format = "yarden"
 annot_file = "./tests/data_for_tests/source/spect_mat_annot_yarden/llb3/llb3_annot_subset.mat"
 labelset = "range: 1-3,6-14,17-19"
 train_dur = 213
 val_dur = 213
+spect_output_dir = "./tests/data_for_tests/generated/prep/train/spect_mat_annot_yarden/teenytweetynet"
 
 [SPECT_PARAMS]
-fft_size = 512
+fft_size = 256
 step_size = 64
-freq_cutoffs = [500, 10000]
+freq_cutoffs = [ 1000, 8000,]
 thresh = 6.25
 transform_type = "log_spect"
 
