--- a/tests/data_for_tests/configs/tweetynet_predict_audio_wav_annot_birdsongrec.toml
+++ b/tests/data_for_tests/configs/tweetynet_predict_audio_wav_annot_birdsongrec.toml
@@ -1,15 +1,15 @@
 [PREP]
 data_dir = "./tests/data_for_tests/source/audio_wav_annot_birdsongrec/Bird0"
-output_dir = "./tests/data_for_tests/generated/prep/predict/audio_wav_annot_birdsongrec"
+output_dir = "./tests/data_for_tests/generated/prep/predict/audio_wav_annot_birdsongrec/tweetynet"
 audio_format = "wav"
-spect_output_dir = "./tests/data_for_tests/generated/prep/predict/audio_wav_annot_birdsongrec"
+spect_output_dir = "./tests/data_for_tests/generated/prep/predict/audio_wav_annot_birdsongrec/tweetynet"
 
 [SPECT_PARAMS]
 fft_size = 512
 step_size = 64
-freq_cutoffs = [ 500, 10000 ]
+freq_cutoffs = [ 500, 10000,]
 thresh = 6.25
-transform_type = 'log_spect'
+transform_type = "log_spect"
 
 [DATALOADER]
 window_size = 88
