--- a/tests/data_for_tests/configs/tweetynet_train_audio_wav_annot_birdsongrec.toml
+++ b/tests/data_for_tests/configs/tweetynet_train_audio_wav_annot_birdsongrec.toml
@@ -1,9 +1,9 @@
 [PREP]
-labelset = '012345678'
+labelset = "012345678"
 data_dir = "./tests/data_for_tests/source/audio_wav_annot_birdsongrec/Bird0"
-output_dir = "./tests/data_for_tests/generated/prep/train/audio_wav_annot_birdsongrec"
+output_dir = "./tests/data_for_tests/generated/prep/train/audio_wav_annot_birdsongrec/tweetynet"
 audio_format = "wav"
-spect_output_dir = "./tests/data_for_tests/generated/prep/train/audio_wav_annot_birdsongrec"
+spect_output_dir = "./tests/data_for_tests/generated/prep/train/audio_wav_annot_birdsongrec/tweetynet"
 annot_format = "birdsong-recognition-dataset"
 annot_file = "./tests/data_for_tests/source/audio_wav_annot_birdsongrec/Bird0/Annotation.xml"
 test_dur = 50
@@ -13,7 +13,7 @@ val_dur = 30
 [SPECT_PARAMS]
 fft_size = 512
 step_size = 64
-freq_cutoffs = [500, 10000,]
+freq_cutoffs = [ 500, 10000,]
 thresh = 6.25
 transform_type = "log_spect"
 
