--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -24,6 +24,6 @@ jobs:
         run: |
           nox -s test-data-download-source
           nox -s test-data-download-generated-ci
-          nox -s coverage -- fix-prep-csv-paths running-on-ci
+          nox -s coverage -- running-on-ci
       - name: upload code coverage
         uses: codecov/codecov-action@v3
