--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,9 +56,10 @@ doc = [
     "furo >=2022.1.2",
     "myst-parser >=0.17.0",
     "sphinx >=3.4.1",
-    "sphinxext-opengraph  >=0.5.1",
+    "sphinxext-opengraph >=0.5.1",
+    "sphinx-autobuild >=2021.3.14",
     "sphinx-copybutton >=0.4.0",
-    "sphinx-autobuild >= 2021.3.14",
+    "sphinx-tabs >=3.4.1",
 ]
 
 [project.urls]
