--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -14,6 +14,7 @@ spect_output_dir = './tests/test_data/generated/audio_cbin_annot_notmat'
 annot_format = 'notmat'
 annot_file = './some/annot/file'
 labelset = 'iabcdefghjk'
+audio_dask_bag_kwargs = { npartitions = 20}
 train_dur = 50
 val_dur = 15
 test_dur = 30
