--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,8 +69,8 @@ Documentation = "https://vak.readthedocs.io"
 vak = 'vak.__main__:main'
 
 [project.entry-points."vak.models"]
-TeenyTweetyNetModel = 'vak.models.teenytweetynet:TeenyTweetyNetModel'
-TweetyNetModel = 'vak.models.tweetynet:TweetyNetModel'
+TeenyTweetyNetModel = 'vak.models.teenytweetynet:TeenyTweetyNet'
+TweetyNetModel = 'vak.models.tweetynet:TweetyNet'
 
 [project.entry-points."vak.metrics"]
 Accuracy = 'vak.metrics.Accuracy'
