CLN: Remove unused multiple model functionality, fix #538
> The config allows instantiating multiple models
  for training / prediction but this was never fully implemented

Squash commits:
- Make config just use "model" option, not "models":
  - Remove `comma_separated_list` from converters
  - Change option name 'models' -> 'model' in config/valid.toml
  - Rewrite is_valid_model_name to test a single string,
    not a list of strings
  - Change attribute `models` -> `model` in config/eval.py
  - Change attribute `models` -> `model` in config/learncurve.py
  - Change attribute `models` -> `model` in config/predict.py
  - Change attribute `models` -> `model` in config/train.py
  - Rewrite/rename config.models -> model.config_from_toml_path,
    model.config_from_toml_dict
  - Fix option 'models' -> model = 'str',
    in all .toml files in tests/data_for_tests/configs
- Rewrite `models.from_model_config_map` as `models.get`:
  - Add src/vak/models/_api.py with BUILTIN_MODELS and
    MODEL_NAMES to use for validation in `models.get`
  - Rewrite models/models.py `from_model_config_map` as `models.get`
  - Import get and _api in vak/models/__init__.py
  - Rewrite core/train.py to take model_name and model_config
    then use models.get
  - Fix cli/train.py to pass model_name and model_config into core.train
  - Rewrite core/eval.py to take model_name and model_config
    then use models.get
  - Fix cli/eval.py to pass model_name and model_config into core.eval
  - Rewrite core/learncurve.py to take model_name and model_config
  - Fix cli/learncurve.py to pass model_name and model_config
    into core.learncurve
  - Rewrite core/predict.py to take model_name and model_config
    then use models.get
  - Fix cli/predict.py to pass model_name and model_config
    into core.predict
  - Make 'model' not 'models' required in src/vak/config/parse.py
  - Use models.MODEL_NAMES in src/vak/config/validators.py
  - Use models.MODEL_NAMES in config/model.py
- Fix tests
  - Fix tests

--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -34,7 +34,7 @@ audio_path_key = 'audio_path'
 window_size = 88
 
 [TRAIN]
-models = 'TweetyNet'
+model = 'TweetyNet'
 root_results_dir = './tests/test_data/results/train'
 csv_path = 'tests/test_data/prep/train/032312_prep_191224_225912.csv'
 num_workers = 4
@@ -57,7 +57,7 @@ csv_path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
 checkpoint_path = '/home/user/results_181014_194418/TweetyNet/checkpoints/'
 labelmap_path = '/home/user/results_181014_194418/labelmap.json'
 output_dir = './tests/test_data/prep/learncurve'
-models = 'TweetyNet'
+model = 'TweetyNet'
 batch_size = 11
 num_workers = 4
 device = 'cuda'
@@ -65,7 +65,7 @@ spect_scaler_path = '/home/user/results_181014_194418/spect_scaler'
 post_tfm_kwargs = {'majority_vote' = true, 'min_segment_dur' = 0.01}
 
 [LEARNCURVE]
-models = 'TweetyNet'
+model = 'TweetyNet'
 root_results_dir = './tests/test_data/results/learncurve'
 batch_size = 11
 num_epochs = 2
@@ -90,7 +90,7 @@ checkpoint_path = '/home/user/results_181014_194418/TweetyNet/checkpoints/'
 labelmap_path = '/home/user/results_181014_194418/labelmap.json'
 annot_csv_filename = '032312_prep_191224_225910.annot.csv'
 output_dir = './tests/test_data/prep/learncurve'
-models = 'TweetyNet'
+model = 'TweetyNet'
 batch_size = 11
 num_workers = 4
 device = 'cuda'
