--- a/tests/data_for_tests/configs/invalid_option_config.toml
+++ b/tests/data_for_tests/configs/invalid_option_config.toml
@@ -22,7 +22,7 @@ transform_type = 'log_spect'
 window_size = 88
 
 [TRAIN]
-models = ['TweetyNet', ]
+model = 'TweetyNet'
 root_results_dir = '/home/user/data/subdir/'
 normalize_spectrograms = true
 num_epochs = 2
