--- a/tests/data_for_tests/configs/teenytweetynet_learncurve_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/teenytweetynet_learncurve_audio_cbin_annot_notmat.toml
@@ -20,7 +20,7 @@ transform_type = "log_spect"
 window_size = 44
 
 [LEARNCURVE]
-models = "TeenyTweetyNet"
+model = "TeenyTweetyNet"
 normalize_spectrograms = true
 batch_size = 4
 num_epochs = 2
