--- a/tests/data_for_tests/configs/tweetynet_learncurve_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/tweetynet_learncurve_audio_cbin_annot_notmat.toml
@@ -20,7 +20,7 @@ transform_type = "log_spect"
 window_size = 88
 
 [LEARNCURVE]
-models = "TweetyNet"
+model = "TweetyNet"
 normalize_spectrograms = true
 batch_size = 11
 num_epochs = 2
