--- a/tests/data_for_tests/configs/tweetynet_train_continue_audio_wav_annot_birdsongrec.toml
+++ b/tests/data_for_tests/configs/tweetynet_train_continue_audio_wav_annot_birdsongrec.toml
@@ -21,7 +21,7 @@ transform_type = "log_spect"
 window_size = 88
 
 [TRAIN]
-models = "TweetyNet"
+model = "TweetyNet"
 normalize_spectrograms = true
 batch_size = 11
 num_epochs = 2
