--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,4 +74,7 @@ exclude = [
 ]
 
 [tool.pytest.ini_options]
-filterwarnings = ["ignore:::.*torch.utils.tensorboard",]
+filterwarnings = [
+    "ignore:::torch.utils.tensorboard",
+    'ignore:Deprecated call to `pkg_resources.declare_namespace',
+]
