--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,4 +77,5 @@ exclude = [
 filterwarnings = [
     "ignore:::torch.utils.tensorboard",
     'ignore:Deprecated call to `pkg_resources.declare_namespace',
+    'ignore:pkg_resources is deprecated as an API'
 ]
