--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,11 @@ readme = "README.md"
 license = {file = "LICENSE"}
 dependencies = [
     "attrs >=19.3.0",
-    "crowsetta >=3.4.0, <4.0.0",
+    "crowsetta >=5.0.0",
     "dask >=2.10.1",
     "evfuncs >=0.3.4",
     "joblib >=0.14.1",
-    "pytorch-lightning >=1.8.4.post0",
+    "pytorch-lightning >=1.8.4.post0, <2.0",
     "matplotlib >=3.3.3",
     "numpy >=1.18.1",
     "scipy >=1.4.1",
@@ -36,7 +36,7 @@ dependencies = [
     "pandas >=1.0.1",
     "tensorboard >=2.8.0",
     "toml >=0.10.2",
-    "torch >=1.7.1",
+    "torch >=1.7.1, <2.0.0",
     "torchvision >=0.5.0",
     "tqdm >=4.42.1",
 ]
@@ -77,4 +77,5 @@ exclude = [
 filterwarnings = [
     "ignore:::torch.utils.tensorboard",
     'ignore:Deprecated call to `pkg_resources.declare_namespace',
+    'ignore:pkg_resources is deprecated as an API'
 ]
