Add options 'dataset_type' and 'input_type' to vak/config/valid.toml

--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -8,6 +8,8 @@
 [PREP]
 data_dir = './tests/test_data/cbins/gy6or6/032312'
 output_dir = './tests/test_data/prep/learncurve'
+dataset_type = 'frame_classification'
+input_type = 'spect'
 audio_format = 'cbin'
 spect_format = 'npz'
 annot_format = 'notmat'
