Add dataset_type and input_type options to configs in tests/data_for_tests/configs/

--- a/tests/data_for_tests/configs/invalid_option_config.toml
+++ b/tests/data_for_tests/configs/invalid_option_config.toml
@@ -2,6 +2,8 @@
 # raises a ValueError when passed to
 # vak.config.validators.are_options_valid
 [PREP]
+dataset_type = "frame classification"
+input_type = "spect"
 data_dir = '/home/user/data/subdir/'
 ouput_dir = '/why/do/i/keep/typing/ouput'  # <-- invalid option 'ouput' instead of 'output'
 audio_format = 'cbin'
