--- a/tests/data_for_tests/configs/invalid_section_config.toml
+++ b/tests/data_for_tests/configs/invalid_section_config.toml
@@ -2,6 +2,8 @@
 # raises a ValueError when passed to
 # vak.config.validators.are_sections_valid
 [PREP]
+dataset_type = "frame classification"
+input_type = "spect"
 data_dir = '/home/user/data/subdir/'
 output_dir = '/why/do/i/keep/typing/ouput'
 audio_format = 'cbin'
