--- a/tests/data_for_tests/configs/teenytweetynet_eval_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/teenytweetynet_eval_audio_cbin_annot_notmat.toml
@@ -1,4 +1,6 @@
 [PREP]
+dataset_type = "frame classification"
+input_type = "spect"
 labelset = "iabcdefghjk"
 data_dir = "./tests/data_for_tests/source/audio_cbin_annot_notmat/gy6or6/032412"
 output_dir = "./tests/data_for_tests/generated/prep/eval/audio_cbin_annot_notmat/teenytweetynet"
