--- a/tests/data_for_tests/configs/teenytweetynet_train_continue_spect_mat_annot_yarden.toml
+++ b/tests/data_for_tests/configs/teenytweetynet_train_continue_spect_mat_annot_yarden.toml
@@ -1,4 +1,6 @@
 [PREP]
+dataset_type = "frame classification"
+input_type = "spect"
 data_dir = "./tests/data_for_tests/source/spect_mat_annot_yarden/llb3/spect"
 output_dir = "./tests/data_for_tests/generated/prep/train/spect_mat_annot_yarden/teenytweetynet"
 spect_format = "mat"
