--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pytorch-lightning >=1.8.4.post0, <2.0",
     "matplotlib >=3.3.3",
     "numpy >=1.18.1",
+    "pynndescent >=0.5.10",
     "scipy >=1.4.1",
     "SoundFile >=0.10.3",
     "pandas >=1.0.1",
@@ -39,6 +40,7 @@ dependencies = [
     "torch >=1.7.1, <2.0.0",
     "torchvision >=0.5.0",
     "tqdm >=4.42.1",
+    "umap-learn >=0.5.3",
 ]
 
 [project.optional-dependencies]
