--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -52,6 +52,8 @@ patience = 4
 results_dir_made_by_main_script = '/some/path/to/learncurve/'
 checkpoint_path = '/home/user/results_181014_194418/TweetyNet/checkpoints/'
 spect_scaler_path = '/home/user/results_181014_194418/spect_scaler'
+train_dataset_params = {'window_size' = 80}
+val_dataset_params = {'window_size' = 80}
 
 [EVAL]
 dataset_path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
