Add 'train_transform_params' and 'val_transform_params' as attributes to TrainConfig, and add in valid.toml

--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -52,7 +52,9 @@ patience = 4
 results_dir_made_by_main_script = '/some/path/to/learncurve/'
 checkpoint_path = '/home/user/results_181014_194418/TweetyNet/checkpoints/'
 spect_scaler_path = '/home/user/results_181014_194418/spect_scaler'
+train_transform_params = {'resize' = 128}
 train_dataset_params = {'window_size' = 80}
+val_transform_params = {'resize' = 128}
 val_dataset_params = {'window_size' = 80}
 
 [EVAL]
