--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -68,6 +68,8 @@ num_workers = 4
 device = 'cuda'
 spect_scaler_path = '/home/user/results_181014_194418/spect_scaler'
 post_tfm_kwargs = {'majority_vote' = true, 'min_segment_dur' = 0.01}
+transform_params = {'resize' = 128}
+dataset_params = {'window_size' = 80}
 
 [LEARNCURVE]
 model = 'TweetyNet'
@@ -100,3 +102,5 @@ spect_scaler_path = '/home/user/results_181014_194418/spect_scaler'
 min_segment_dur = 0.004
 majority_vote = false
 save_net_outputs = false
+transform_params = {'resize' = 128}
+dataset_params = {'window_size' = 80}
