--- a/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
@@ -19,9 +19,6 @@ freq_cutoffs = [ 500, 10000,]
 thresh = 6.25
 transform_type = "log_spect"
 
-[DATALOADER]
-window_size = 88
-
 [LEARNCURVE]
 model = "TweetyNet"
 normalize_spectrograms = true
@@ -33,6 +30,12 @@ patience = 4
 num_workers = 4
 device = "cuda"
 root_results_dir = "./tests/data_for_tests/generated/results/learncurve/audio_cbin_annot_notmat/TweetyNet"
+
+[LEARNCURVE.train_dataset_params]
+window_size = 88
+
+[LEARNCURVE.val_transform_params]
+window_size = 88
 
 [TweetyNet.optimizer]
 lr = 0.001
