--- a/tests/data_for_tests/configs/invalid_option_config.toml
+++ b/tests/data_for_tests/configs/invalid_option_config.toml
@@ -20,9 +20,6 @@ freq_cutoffs = [500, 10000]
 thresh = 6.25
 transform_type = 'log_spect'
 
-[DATALOADER]
-window_size = 88
-
 [TRAIN]
 model = 'TweetyNet'
 root_results_dir = '/home/user/data/subdir/'
@@ -32,6 +29,9 @@ batch_size = 11
 val_error_step = 1
 checkpoint_step = 1
 save_only_single_checkpoint_file = true
+
+[TRAIN.dataset_params]
+window_size = 88
 
 [TweetyNet.optimizer]
 learning_rate = 0.001
