--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -83,7 +83,10 @@ results_dir_made_by_main_script = '/some/path/to/learncurve/'
 post_tfm_kwargs = {'majority_vote' = true, 'min_segment_dur' = 0.01}
 num_workers = 4
 device = 'cuda'
-
+train_transform_params = {'resize' = 128}
+train_dataset_params = {'window_size' = 80}
+val_transform_params = {'resize' = 128}
+val_dataset_params = {'window_size' = 80}
 
 [PREDICT]
 dataset_path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
