--- a/tests/data_for_tests/configs/ConvEncoderUMAP_train_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/ConvEncoderUMAP_train_audio_cbin_annot_notmat.toml
@@ -27,10 +27,10 @@ device = "cuda"
 root_results_dir = "./tests/data_for_tests/generated/results/train/audio_cbin_annot_notmat/ConvEncoderUMAP"
 
 [TRAIN.train_transform_params]
-resize = 128
+resize = [128, 128]
 
 [TRAIN.val_transform_params]
-resize = 128
+resize = [128, 128]
 
 [ConvEncoderUMAP.optimizer]
 lr = 0.001
