Add back lower bounds for pytorch-lightning + torch and torchvision in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "dask >=2.10.1",
     "evfuncs >=0.3.4",
     "joblib >=0.14.1",
-    "pytorch-lightning",
+    "pytorch-lightning >=2.0.7",
     "matplotlib >=3.3.3",
     "numpy >=1.18.1",
     "pynndescent >=0.5.10",
@@ -37,8 +37,8 @@ dependencies = [
     "pandas >=1.0.1",
     "tensorboard >=2.8.0",
     "toml >=0.10.2",
-    "torch",
-    "torchvision",
+    "torch >= 2.0.1",
+    "torchvision >=15.2",
     "tqdm >=4.42.1",
     "umap-learn >=0.5.3",
 ]
