--- a/tests/data_for_tests/configs/TweetyNet_eval_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_eval_audio_cbin_annot_notmat.toml
@@ -27,5 +27,16 @@ output_dir = "./tests/data_for_tests/generated/results/eval/audio_cbin_annot_not
 [EVAL.transform_params]
 window_size = 88
 
+[TweetyNet.network]
+conv1_filters = 8
+conv1_kernel_size = [3, 3]
+conv2_filters = 16
+conv2_kernel_size = [5, 5]
+pool1_size = [4, 1]
+pool1_stride = [4, 1]
+pool2_size = [4, 1]
+pool2_stride = [4, 1]
+hidden_size = 32
+
 [TweetyNet.optimizer]
 lr = 0.001
